# brandstream

./: .gitignore  README.md  cloudbuild.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_analyze_brief.py  test_endpoint.sh  test_flattened_schema.py  test_schema.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  ad_creative_models.py  brief_models.py  image_processing_models.py  translation_models.py
backend/app/prompts/: __init__.py  ad_creative_evaluation.txt  brief_analysis.txt  creative_generation.txt  translation.txt
backend/app/routers/: __init__.py  ad_creative_router.py  brief_router.py  image_processing_router.py  translation_router.py
backend/app/services/: __init__.py  ad_creative_service.py  asset_generation_service.py  gemini_service.py  image_processing_service.py  translation_service.py
backend/app/utils/: file_extractor.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: asset-generation.tsx  brief-input.tsx  evaluation.tsx  header.tsx  image-editor-modal.tsx  prompt-editor-modal.tsx  sidebar.tsx  stepper-flow.tsx  theme-provider.tsx
frontend/components/brief-analysis/: brief-analysis-display.tsx  field-display.tsx  index.ts  section-card.tsx
frontend/components/steps/: brief-upload.tsx  (+3 more)
frontend/services/: api.ts
referencecode/: adjustpanel.txt  aiservice.txt  croppanel.txt  imageEditor.txt  imageditor.txt  mediageneration.txt  toolpanel.txt
(+16 files in other folders)
